--- a/index.html
+++ b/index.html
@@ -27,31 +27,94 @@
 
 	      <div class="collapse navbar-collapse" id="navbar-collapse-main">
 	        <ul class="nav navbar-nav navbar-right">
-				<li><a href='home'>Home</a></li><li><a href='about'>About</a></li>
+				<li><a href='#welcome'>Welcome</a></li><li><a href='#when_and_where'>When and Where</a></li><li><a href='#services'>Services</a></li><li><a href='#info'>Info</a></li>
 	        </ul>
 	      </div><!-- /.navbar-collapse -->
 	    </div><!-- /.container-fluid -->
 	  </nav>
 
-    <div id="main">
-      <h1>A Brand New nanoc Site</h1>
-
-<p>You’ve just created a new nanoc site. The page you are looking at right now is the home page for your site. To get started, consider replacing this default homepage with your own customized homepage. Some pointers on how to do so:</p>
-
-<ul>
-  <li><p><strong>Change this page’s content</strong> by editing the “index.html” file in the “content” directory. This is the actual page content, and therefore doesn’t include the header, sidebar or style information (those are part of the layout).</p></li>
-  <li><p><strong>Change the layout</strong>, which is the “default.html” file in the “layouts” directory, and create something unique (and hopefully less bland).</p></li>
-</ul>
-
-<p>If you need any help with customizing your nanoc web site, be sure to check out the documentation (see sidebar), and be sure to subscribe to the discussion group (also see sidebar). Enjoy!</p>
-
-<p>Another nanoc convert! Master will be pleased.</p>
+		<!-- first section - Home -->
+<div id="welcome" class="home">
+  <div class="text-vcenter">
+    <h1>Emma and Jordan Get Hitched</h1>
+    <a href="#when_and_where" class="btn btn-default btn-lg">Continue</a>
+  </div>
+</div>
+<!-- /first section --><!-- second section - About -->
+<div id="when_and_where" class="pad-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <img src="images/logo.png" alt="" />
+      </div>
+      <div class="col-sm-6 text-center">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum metus et ligula venenatis, at rhoncus nisi molestie. Pellentesque porttitor elit suscispit massa laoreet metus.</p>
+      </div>
     </div>
+  </div>
+</div>
+<!-- /second section --><!-- third section - Services -->
+<div id="services" class="pad-section">
+  <div class="container">
+    <h2 class="text-center">Our Services</h2> <hr />
+    <div class="row text-center">
+      <div class="col-sm-3 col-xs-6">
+        <i class="glyphicon glyphicon-cloud"> </i>
+        <h4>Service 1</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+      </div>
+      <div class="col-sm-3 col-xs-6">
+        <i class="glyphicon glyphicon-leaf"> </i>
+        <h4>Service 2</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+      </div>
+      <div class="col-sm-3 col-xs-6">
+        <i class="glyphicon glyphicon-phone-alt"> </i>
+        <h4>Service 3</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+      </div>
+      <div class="col-sm-3 col-xs-6">
+        <i class="glyphicon glyphicon-bullhorn"> </i>
+        <h4>Service 4</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /third section --><!-- fourth section - Information -->
+<div id="information" class="pad-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /fourth section -->
 
-    <script src="/jquery/"></script>
-    <script src="/bootstrap-js/ "></script>
+    <script src="/jquery.js"></script>
+    <script src="/bootstrap-js.js "></script>
     <script src="//maps.google.com/maps/api/js?sensor=true"></script>
-    <script src="/main/"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
 
