--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 	      <div class="collapse navbar-collapse" id="navbar-collapse-main">
 	        <ul class="nav navbar-nav navbar-right">
-				<li><a href='#welcome'>Welcome</a></li><li><a href='#when_and_where'>When and Where</a></li><li><a href='#accomodation'>Accomodation</a></li><li><a href='#rsvp'>RSVP</a></li>
+				<li><a href='#welcome'>Welcome</a></li><li><a href='#when_and_where'>When and Where</a></li><li><a href='#wedding_party'>Wedding Party</a></li><li><a href='#accomodation'>Accomodation</a></li><li><a href='#make_a_weekend_of_it'>Make a weekend of it</a></li><li><a href='#rsvp'>RSVP</a></li>
 	        </ul>
 	      </div><!-- /.navbar-collapse -->
 	    </div><!-- /.container-fluid -->
@@ -85,22 +85,46 @@
 <div id="when_and_where" class="pad-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
-        <div id='google_map'> </div>
-      </div>
-      <div class="col-sm-6 text-center">
+      <div class="col-sm-12 text-center">
         <h2>When and Where</h2>
 		<p>14:00, Sunday 30th August 2015</p>
 		<p>Danby Castle, Castle Lane, Whitby, North Yorkshire YO21 2NP</p>
+		<div id='google_map'> </div>
       </div>
     </div>
   </div>
 </div>
-<!-- /second section --><!-- third section - Services -->
+<!-- /second section --><div id="wedding_party" class="pad-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /fourth section --><!-- third section - Services -->
 <div id="accomodation" class="pad-section">
   <div class="container">
     <h2 class="text-center">Some Accommodation Options</h2>
-	<h2 class="text-center">Its bank holiday weekend so BOOK EARLY!</h2> <hr />
+	<h2 class="text-center">Its a bank holiday weekend so BOOK EARLY!</h2> <hr />
     <div class="row text-center">
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon camping"> </i>
@@ -130,19 +154,25 @@
     </div>
     <div class="row text-center">
       <div class="col-sm-3 col-xs-6">
-        <i class="glyphicon glyphicon-cloud"> </i>
-        <h4>Service 1</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+		<a href='http://foxandhounds-ainthorpe.com/index.html' target='_blank'>  
+			<i class="glyphicon fox"> </i>
+			<h4>Fox and Hounds</h4>
+			<p>7 Rooms available in a former 16th Century Coaching Inn. (Dog Friendly)</p>
+		</a>
       </div>
       <div class="col-sm-3 col-xs-6">
-        <i class="glyphicon glyphicon-leaf"> </i>
-        <h4>Service 2</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+		<a href='http://www.rowantreefarm.co.uk/' target='_blank'>  
+			  <i class="glyphicon rowantree"> </i>
+			<h4>Rowantree Farm</h4>
+        	<p>Bed and Breakfast on a working dairy farm < 1 mile from the venue</p>
+		</a>
       </div>
       <div class="col-sm-3 col-xs-6">
-        <i class="glyphicon glyphicon-phone-alt"> </i>
-        <h4>Service 3</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+		  <a href='http://www.crossleygatefarm.co.uk/index.html' target='_blank'>  
+	     	  <i class="glyphicon crossley"> </i>
+			<h4>Crossley Gate Farm</h4>
+  	 	  <p>Another Bed and Breakfast < 1 mile from the venue</p>
+		</a>
       </div>
       <div class="col-sm-3 col-xs-6">
 		<a href='http://www.danbycastle.com/weddings/accommodation/' target='_blank'>  
@@ -155,6 +185,33 @@
   </div>
 </div>
 <!-- /third section --><!-- fourth section - Information -->
+<div id="make_a_weekend_of_it" class="pad-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /fourth section --><!-- fourth section - Information -->
 <div id="rsvp" class="pad-section">
   <div class="container">
     <div class="row">
