updates to pages

--- a/index.html
+++ b/index.html
@@ -96,28 +96,76 @@
 </div>
 <!-- /second section --><div id="wedding_party" class="pad-section">
   <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
-      </div>
-    </div>
+	 <div class="row">
+         <div class="col-sm-12">
+           <div class="panel panel-default">
+             <div class="panel-heading">
+               <h2 class="panel-title">Grooms Party</h2>
+             </div>
+             <div class="panel-body lead">
+			    <div class="row text-center">
+			      <div class="col-sm-12 ">
+					<i class="glyphicon jordan"> </i>
+			 		<h4>Groom</h4>
+					<p>Jordan Rogers-Smith</p>
+			      </div>
+			  	</div>
+			    <div class="row text-center">
+			      <div class="col-sm-4">
+					<i class="glyphicon lee-raisbeck"> </i>
+			 		<h4>Best Man</h4>
+					<p>Lee Raisbeck</p>
+			      </div>
+			      <div class="col-sm-4">
+					<i class="glyphicon michael-robson"> </i>
+			 		<h4>Best Man</h4>
+					<p>Michael Robson</p>
+			      </div>
+			      <div class="col-sm-4">
+					<i class="glyphicon ric-mcmahon"> </i>
+			 		<h4>Head Usher</h4>
+					<p>Ric McMahon</p>
+			      </div>
+			  	</div>
+             </div>
+           </div>
+         </div>
+	</div>
+	 <div class="row">
+         <div class="col-sm-12">
+           <div class="panel panel-default">
+             <div class="panel-heading">
+               <h2 class="panel-title">Brides Party</h2>
+             </div>
+             <div class="panel-body lead">
+			    <div class="row text-center">
+			      <div class="col-sm-12 ">
+					<i class="glyphicon emma-wood"> </i>
+			 		<h4>Bride</h4>
+					<p>Emma Wood</p>
+			      </div>
+			  	</div>
+			    <div class="row text-center">
+			      <div class="col-sm-4">
+					<i class="glyphicon kayliehg-barker"> </i>
+			 		<h4>Made of Honour</h4>
+					<p>Kayleigh Barker</p>
+			      </div>
+			      <div class="col-sm-4">
+					<i class="glyphicon cat-hall"> </i>
+			 		<h4>Bridesmaid</h4>
+					<p>Cat Hall</p>
+			      </div>
+			      <div class="col-sm-4">
+					<i class="glyphicon charlotte-hall"> </i>
+			 		<h4>Bridesmaid</h4>
+					<p>Charlotte Hall</p>
+			      </div>
+			  	</div>
+             </div>
+           </div>
+         </div>
+	</div>	
   </div>
 </div>
 <!-- /fourth section --><!-- third section - Services -->
@@ -188,25 +236,27 @@
 <div id="make_a_weekend_of_it" class="pad-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            <h2 class="panel-title">Some Highlights of things to do in the area</h2>
           </div>
         </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
+		
+	    <div class="row text-center">
+	      <div class="col-sm-4">
+			<i class="glyphicon lee-raisbeck"> </i>
+	 		<h4>Best Man</h4>
+			<p>Lee Raisbeck</p>
+	      </div>
+	      <div class="col-sm-8">
+	         <div class="panel panel-default">
+				 <div class="panel-body lead">
+					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+				 </div>			   
+	         </div>
+	      </div>
+	  	</div>
       </div>
     </div>
   </div>
@@ -215,23 +265,13 @@
 <div id="rsvp" class="pad-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
+            <h2 class="panel-title">RSVP</h2>
           </div>
           <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            Details are on your invitation but if you have not recieved your invitation yet please let us know if you are able to make it and have an specific dietary requirements by sending us an email to {EMAIL}.
           </div>
         </div>
       </div>
