--- a/index.html
+++ b/index.html
@@ -246,13 +246,14 @@
 	    <div class="row text-center">
 	      <div class="col-sm-4">
 			<i class="glyphicon lee-raisbeck"> </i>
-	 		<h4>Best Man</h4>
-			<p>Lee Raisbeck</p>
 	      </div>
 	      <div class="col-sm-8">
 	         <div class="panel panel-default">
+			 				<div class="panel-heading">
+			 	 		<h4>The Moors Centre in Danby</h4>
+			 		</div>
 				 <div class="panel-body lead">
-					 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+					 The Moors Centre in Danby is a great attraction for both adults and kids, where you can get lost in the salmon labyrinth, try your hand at quoits and brush up your navigational skills.
 				 </div>			   
 	         </div>
 	      </div>
@@ -271,7 +272,14 @@
             <h2 class="panel-title">RSVP</h2>
           </div>
           <div class="panel-body lead">
-            Details are on your invitation but if you have not recieved your invitation yet please let us know if you are able to make it and have an specific dietary requirements by sending us an email to {EMAIL}.
+            Details are on your invitation but if you have not recieved your invitation yet please let us know if you are able to make it and have an specific dietary requirements by sending us an email below.
+            
+            <form method="POST" action="//forms.brace.io/emmaandjordangethitched@gmail.com">
+                <input type="text" name="name">
+                <input type="text" name="from">
+                <input type="hidden" name="_subject" value="RVSP" />
+                <input type="submit" value="Send">
+            </form>
           </div>
         </div>
       </div>
