--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     <div class="row">
       <div class="col-sm-12 text-center">
         <h2>When and Where</h2>
-		<p>14:00, Sunday 30th August 2015</p>
-		<p>Danby Castle, Castle Lane, Whitby, North Yorkshire YO21 2NP</p>
-		<div id='google_map'> </div>
+		    <p>14:00, Sunday 30th August 2015</p>
+		    <p>Danby Castle, Castle Lane, Whitby, North Yorkshire YO21 2NP</p>
+		    <div id='google_map'> </div>
       </div>
     </div>
   </div>
@@ -268,7 +268,7 @@
                 <h4>Whitby</h4>
               </div>
               <div class="panel-body lead">
-                Visit Whitbt text
+                Whitby has tonnes of things to do. From climbing the 199 steps up the the old abbey, to rock climbing, sailing, surfing, amazing walks and delicious sea food, its a great palce to visit on a day, or weekend away.
               </div>			   
             </div>
           </div>
@@ -298,7 +298,7 @@
                 <h4>Goathland</h4>
               </div>
               <div class="panel-body lead">
-
+                  This bracing moorland village is feature in the television series 'Heartbeat' (as 'Aidensfield') and in the 'Harry Potter' films as 'Hogsmeade' Station. It's fun to arrive on the trains of the North Yorkshire Moors Railway, after which walkers can enjoy lots of local strolls and hikes.
               </div>			   
             </div>
           </div>
@@ -313,8 +313,17 @@
                 <h4>Rosedale</h4>
               </div>
               <div class="panel-body lead">
-                Rosedale
+                Steep and winding routes on either side of the dale lead down to the village of Rosedale Abbey, a popular target for country walks. See the massive stone kilns and other relics on the line of the former mineral railway, above the village.
               </div>			   
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-sm-12">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4><a href='http://www.northyorkmoors.org.uk/visiting/see-and-do' target='_blank'>Loads more to see and do in the area....</a></h4>
+              </div>
             </div>
           </div>
         </div>
@@ -334,7 +343,7 @@
           <div class="panel-body lead">
             <div id='already_rsvp'>
               <h2>Thankyou</h2>
-              <p>It would seem you have already RSVP'd. However if something went wrong or you need to RSVP again <a href='#' id='show_rsvp'>click here</a></p>
+              <p>Thankyou for responding. However if something went wrong or you need to RSVP again <a href='#' id='show_rsvp'>click here</a></p>
             </div>
             <div id='need_to_rsvp'>
             <p>Please RSVP below to let us know if you are able to attend and also if you have an specific dietry requirements.</p>
