--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     <input id='form_name' type="text" name="name" placeholder='Jordan & Emma' required>
                   </label>
                 </p>
-                <p>Are you able to attend: 
+                <p><label>Are you able to attend: </label>
                   <div class='form_radio'>
                     <label for='form_yes'>Yes
                       <input id='form_yes' type='radio' value='yes' name='coming' checked>
@@ -363,6 +363,21 @@
                       <input id='form_no' type='radio' value='no' name='coming'>
                     </label>
                   </div>
+                </p>
+                <p><label>Evening +1: </label>
+                  <div class='form_radio'>
+                    <label for='form_evening_plus_one_yes'>Yes
+                      <input id='form_evening_plus_one_yes' type='radio' value='yes' name='evening_plus_one' required>
+                    </label>
+                    <label form='form_evening_plus_one_no'>No
+                      <input id='form_evening_plus_one_no' type='radio' value='no' name='evening_plus_one'>
+                    </label>
+                  </div>
+                </p>
+                <p>
+                  <label for='form_evening_plus_one_name'>Evening +1 name: 
+                    <input id='form_evening_plus_one_name' type="text" name="email">
+                  </label>
                 </p>
                 <p>
                   <label for='form_email'>Email: 
