updated the rvsp

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
             </div>
             <div id='need_to_rsvp'>
             <p>Please RSVP below to let us know if you are able to attend and also if you have an specific dietry requirements.</p>
+            <p>Due to limits on the size of the reception area we are unable to have +1s for the day time. However they are more than welcome to join our celebrations in the evening.</p>
             
             <form method="POST" action="/" data-parsley-validate>
                 <p>
