--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
 	      <p>Unfurnished Bell Tent (sleeps 4) - £75</p>
         <p>Furnished Bell Tent (sleeps 2) - £100 </p>
         <p></p>
-        <p>We have secured 15 at the venue Let us know when RSVPing if you would like one</p>
+        <p>We have secured 15 at the venue </p>
+        <p>Let us know when RSVPing if you would like one</p>
       </div>
       <div class="col-sm-3 col-xs-6">
 		<a href='http://www.milburnarms.com' target='_blank'>  
