--- a/index.html
+++ b/index.html
@@ -182,20 +182,49 @@
       <div class="col-sm-3 col-xs-6">
         <i class="glyphicon glamping"> </i>
         <h4>On Site Glamping</h4>
-	      <p>Unfurnished Bell Tent (sleeps 4) - £75</p>
+        <p>Unfurnished Bell Tent (sleeps 4) - £75</p>
         <p>Furnished Bell Tent (sleeps 2) - £100 </p>
-        <p></p>
         <p>We have secured 15 at the venue </p>
         <p>Let us know when RSVPing if you would like one</p>
       </div>
       <div class="col-sm-3 col-xs-6">
-		<a href='http://www.milburnarms.com' target='_blank'>  
+		<a href='http://www.danbycastle.com/weddings/accommodation/' target='_blank'>  
 			<i class="glyphicon cottage"> </i>
 			<h4>Milburn Arms Hotel</h4>
-      <p>We have booked 11 Double/King Size Rooms - £100 inc Breakfast and Night Transport Back (we will organise a coach)</p> 
-      <p>Let us know when RSVPing if you would like one</p>
+        <h4>Cottages</h4>
+               <p>Lots of cottages available in the area...</p>
 		</a>
-      </div>	  
+      </div>	 
+       <div class="col-sm-3 col-xs-6">
+               <a href='http://www.dukeofwellingtondanby.co.uk/' target='_blank'>
+                       <i class="glyphicon duke"> </i>
+                       <h4>The Duke of Wellington</h4>
+                       <p>Quaint 18th Century inn in Danby</p>
+               </a>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-sm-3 col-xs-6">
+               <a href='http://foxandhounds-ainthorpe.com/index.html' target='_blank'>
+                       <i class="glyphicon fox"> </i>
+                       <h4>Fox and Hounds</h4>
+                       <p>7 Rooms available in a former 16th Century Coaching Inn. (Dog Friendly)</p>
+               </a>
+      </div>
+      <div class="col-sm-3 col-xs-6">
+               <a href='http://www.rowantreefarm.co.uk/' target='_blank'>
+                         <i class="glyphicon rowantree"> </i>
+                       <h4>Rowantree Farm</h4>
+               <p>Bed and Breakfast on a working dairy farm < 1 mile from the venue</p>
+               </a>
+      </div>
+      <div class="col-sm-3 col-xs-6">
+                 <a href='http://www.crossleygatefarm.co.uk/index.html' target='_blank'>
+                 <i class="glyphicon crossley"> </i>
+                       <h4>Crossley Gate Farm</h4>
+                 <p>Another Bed and Breakfast < 1 mile from the venue</p>
+               </a>
+      </div>       
       <div class="col-sm-3 col-xs-6">
 		<a href='http://www.danbycastle.com/weddings/accommodation/' target='_blank'>  
         <i class="glyphicon glyphicon-plus"> </i>
