--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </label>
                   </div>
                 </p>
-                <p><label>Evening +1: </label>
+                <p><label>Day guest with Evening +1: </label>
                   <div class='form_radio'>
                     <label for='form_evening_plus_one_yes'>Yes
                       <input id='form_evening_plus_one_yes' type='radio' value='yes' name='evening_plus_one' required>
