added in gift info

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
             </div>
             <div id='need_to_rsvp'>
             <p>Please RSVP below to let us know if you are able to attend and also if you have an specific dietry requirements.</p>
+            <p>Your presence at our wedding day is enough but if you wish to make a contribution towards our new married life we would appreciate any financial contribution towards our honeymoon (an unattainable feat at the minute due to Emmas near permenant student status) or, considering our ever expanding furry army, a <a href='https://www.google.co.uk/search?q=DC50+dyson' target='_blank'>Dyson Pet Hover</a> would be REALLY useful! </p>
             <p>Due to limits on the size of the reception area we are unable to have +1s for the day time. However they are more than welcome to join our celebrations in the evening.</p>
             
             <form method="POST" action="/" data-parsley-validate>
